BFD-4266: changes to Disabling resource when flag is ON