@@ -3,18 +3,16 @@ package gov.cms.bfd.server.ng;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.RestfulServer;
+import gov.cms.bfd.server.ng.coverage.CoverageResourceProvider;
+import gov.cms.bfd.server.ng.eob.EobResourceProvider;
 import gov.cms.bfd.server.ng.interceptor.BanUnsupportedHttpMethodsInterceptor;
 import gov.cms.bfd.server.ng.interceptor.ExceptionHandlingInterceptor;
 import gov.cms.bfd.server.ng.interceptor.LoggingInterceptor;
+import gov.cms.bfd.server.ng.patient.PatientResourceProvider;
 import gov.cms.bfd.server.openapi.OpenApiInterceptor;
 import jakarta.servlet.annotation.WebServlet;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.hl7.fhir.instance.model.api.IBaseResource;
-import org.hl7.fhir.r4.model.Coverage;
-import org.hl7.fhir.r4.model.ExplanationOfBenefit;
-import org.hl7.fhir.r4.model.Patient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
@@ -45,10 +43,8 @@ public class V3Server extends RestfulServer {
 
     this.setFhirContext(FhirContext.forR4());
 
-    List<IResourceProvider> filteredProviders =
-        resourceProviders.stream()
-            .filter(this::isResourceProviderEnabled)
-            .collect(Collectors.toList());
+    var filteredProviders =
+        resourceProviders.stream().filter(this::isResourceProviderEnabled).toList();
 
     this.registerProviders(filteredProviders); // Register the filtered list
     this.registerInterceptor(new LoggingInterceptor());
@@ -57,33 +53,37 @@ public class V3Server extends RestfulServer {
     this.registerInterceptor(new OpenApiInterceptor());
   }
 
-  private boolean isResourceProviderEnabled(IResourceProvider provider) {
-    Class<? extends IBaseResource> resourceTypeClass = provider.getResourceType();
-    boolean keepProvider = true; // Default to keeping the provider
+  private boolean checkAndLogProviderStatus(boolean isEnabledFromConfig, String resourceName) {
+    if (!isEnabledFromConfig) {
+      LOGGER.info("Disabling {} endpoint based on config.", resourceName);
+      return false;
+    }
+    return true;
+  }
 
+  private boolean isResourceProviderEnabled(IResourceProvider provider) {
     Configuration.Nonsensitive nonsensitiveConfig = configuration.getNonsensitive();
 
-    if (resourceTypeClass.equals(ExplanationOfBenefit.class)) {
-      keepProvider = nonsensitiveConfig.isEobEnabled();
-      if (!keepProvider) {
-        LOGGER.info("Disabling ExplanationOfBenefit endpoint based on config.");
-      }
-    } else if (resourceTypeClass.equals(Patient.class)) {
-      keepProvider = nonsensitiveConfig.isPatientEnabled();
-      if (!keepProvider) {
-        LOGGER.info("Disabling Patient endpoint based on config.");
-      }
-    } else if (resourceTypeClass.equals(Coverage.class)) {
-      keepProvider = nonsensitiveConfig.isCoverageEnabled();
-      if (!keepProvider) {
-        LOGGER.info("Disabling Coverage endpoint based on config.");
-      }
-    } else {
-      LOGGER.debug(
-          "Keeping {} endpoint by default (no specific flag configured).",
-          resourceTypeClass.getSimpleName());
-    }
-
+    boolean keepProvider =
+        switch (provider) {
+          case EobResourceProvider eob ->
+              checkAndLogProviderStatus(
+                  nonsensitiveConfig.isEobEnabled(), provider.getResourceType().getSimpleName());
+          case PatientResourceProvider patientProvider ->
+              checkAndLogProviderStatus(
+                  nonsensitiveConfig.isPatientEnabled(),
+                  provider.getResourceType().getSimpleName());
+          case CoverageResourceProvider coverageProvider ->
+              checkAndLogProviderStatus(
+                  nonsensitiveConfig.isCoverageEnabled(),
+                  provider.getResourceType().getSimpleName());
+          default -> {
+            LOGGER.debug(
+                "Keeping {} endpoint by default (no specific flag configured).",
+                provider.getResourceType().getSimpleName());
+            yield true;
+          }
+        };
     return keepProvider;
   }
 }
